# gprc-proxy

./: .gitmodules  Cargo.toml  build.rs
replaced_crates/prost-0.11.6/: .cargo_vcs_info.json
replaced_crates/tonic-0.8.3/src/client/: grpc.rs
replaced_crates/tonic-0.8.3/src/codec/: buffer.rs  decode.rs  encode.rs  prost.rs
src/: main.rs  server.rs  tensorflow.rs  tensorflowserving.rs  tfclient.rs  tfserver.rs
