[package]
name = "helloworld-tonic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.8.3"
prost = "0.11.6"
prost-types = "0.11"
tokio = {version="1.0", features = ["macros", "rt-multi-thread"]}
http = "0.2"
futures-util = "0.3"
bytes = "1.3.0"

[build-dependencies]
tonic-build = "0.8"

[patch.crates-io]
tonic = { path = "/Users/hshamji/Desktop/repos/to_delete/helloworld-tonic/replaced_crates/tonic-0.8.3"}
prost = { path = "/Users/hshamji/Desktop/repos/to_delete/helloworld-tonic/replaced_crates/prost-0.11.6"}

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "hws"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "hwc"
path = "src/client.rs"

[[bin]]
name = "tfc"
path = "src/tfclient.rs"

[[bin]]
name = "test"
path = "src/test.rs"